# Projects

./: .gitattributes  README.md
Basic Fiber-Optics Project/: .cproject  .mxproject  .project  Project Code (Open with STM32Cube).ioc  READ ME.md  README.md  STM32F051R8TX_FLASH.ld
Engineering Thesis/: README.md
Escape Room Puzzle/: README.md
FOC algorithm for a surface PM motor/: Proj2_Part1.mdl  Proj2_Part2.mdl  README.md
IOS Game/: README.md
Medical Imaging and Image Processing/: README.md
Medical Imaging and Image Processing/Code/: HUB4045F - Liam Breytenbach - BRYLIA002 - Assignment 4-checkpoint.ipynb  HUB4045F - Liam Breytenbach - BRYLIA002 - Assignment 4.ipynb  femur1.stl  femur1.stl.vtkjs  femur1.vtkjs  femur2.stl
Modulation & Demodulation/: README.md
Self Driving Robotic Car/: README.md
Self Driving Robotic Car/KiCAD/: Line_Follower.kicad_pcb  Line_Follower.kicad_prl  Line_Follower.kicad_pro  (+4 more)
Weather Station/: README.md
Wildlife Monitoring System/: README.md
Wildlife Monitoring System/Project Subsections/Cam/: CMakeLists.txt  config.xml
Wildlife Monitoring System/Project Subsections/Cam/include/: Image.hpp
Wildlife Monitoring System/Project Subsections/Cam/src/: Image.cpp  bind.cpp
Wildlife Monitoring System/Project Subsections/Cam/test/camera/: main.py
Wildlife Monitoring System/Project Subsections/Cam/test/image_processing/: test.py
Wildlife Monitoring System/Project Subsections/Cam/test/sensor/examples/: main.py
Wildlife Monitoring System/Project Subsections/Cam/test/sensor/lib/waveshare_TSL2591/: TSL2591.py
(+467 files in other folders)
